syntax = "proto3";

package pb;

option go_package = "github.com/zcubbs/ssl-tracker";

message LogoutUserRequest {
  string session_id = 2;
}
